post-check;id#: 182;v: 1.44;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -56,10 +56,12 @@ I would like to focus on my beta world content first and formost. When doing so 
 
 ### () - TUE 03/21/2023
 <!-- forpost/edit -->
-* () edit: threejs-scene - edit opening and getting started
-* () forpost: threejs-scene - check state of demos
+* (done) edit: threejs-scene - edit opening and getting started
+* (done) forpost: threejs-scene - update state of demos to r146 style
+* () forpost: threejs-scene - expand with some new demos that are very much needed for the post
 <!-- videoground-content -->
 * () videoground-blog-posts - video2 for threejs-scene
+* () edit: threejs-scene - embed video2
 * () videoground-beta-world
 <!-- forpost/new -->
 * () start a quaternion r146 prototype
