--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -58,13 +58,13 @@ I would like to focus on my beta world content first and formost. When doing so 
 <!-- forpost/edit -->
 * (done) edit: threejs-scene - edit opening and getting started
 * (done) forpost: threejs-scene - update state of demos to r146 style
-* () forpost: threejs-scene - expand with some new demos that are very much needed for the post
-<!-- videoground-content -->
-* () videoground-blog-posts - video2 for threejs-scene
-* () edit: threejs-scene - embed video2
-* () videoground-beta-world
+* (done) forpost: threejs-scene - expand with some new demos that are very much needed for the post
+* (done) videoground-blog-posts - video2 for threejs-scene
+* (done) edit: threejs-scene - embed video2
 <!-- forpost/new -->
 * () start a quaternion r146 prototype
+<!-- videoground-content -->
+* () videoground-beta-world - start an all new project that has to do with morph attributes
 <!-- videoground R8 -->
 * () videoground r8 - 
 
