todo update for 03/22/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -38,6 +38,10 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## () - WEEK 4 - SUN 03/19/2023 - SAT 03/25/2023
 
 ### () - SAT 03/25/2023
+<!-- videoground-content -->
+* () videoground-beta-world - start an all new project that has to do with morph attributes
+<!-- videoground R8 -->
+* () videoground r8 - 
 
 
 ### () - FRI 03/24/2023
@@ -48,11 +52,14 @@ I would like to focus on my beta world content first and formost. When doing so 
 
 ### () - THU 03/23/2023
 <!-- forpost/edit -->
-* () edit: threejs-cube-texture -
+* () edit: threejs-cube-texture - edit opening and getting started
+* () forpost: threejs-examples-breath-module - work more on r1 of the module
+* () edit: threejs-examples-breath-module - expand the post if r1 is done
 
 ### () - WED 03/22/2023
-<!-- forpost/edit -->
-* () edit: threejs-torus -
+* (done) edit: threejs-torus - proof read and update demos to r146
+* (done) r146 demos: new quaternion demos
+* (done) started a new r1 of breath.js
 
 ### () - TUE 03/21/2023
 <!-- forpost/edit -->
@@ -61,12 +68,7 @@ I would like to focus on my beta world content first and formost. When doing so 
 * (done) forpost: threejs-scene - expand with some new demos that are very much needed for the post
 * (done) videoground-blog-posts - video2 for threejs-scene
 * (done) edit: threejs-scene - embed video2
-<!-- forpost/new -->
-* () start a quaternion r146 prototype
-<!-- videoground-content -->
-* () videoground-beta-world - start an all new project that has to do with morph attributes
-<!-- videoground R8 -->
-* () videoground r8 - 
+* (done) start a quaternion r146 prototype
 
 ### () - MON 03/20/2023
 * (done) videoground r8 - new start video for R8
