post-check;id#: 855;v: 1.36;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -26,11 +26,14 @@ I would like to focus on my beta world content first and formost. When doing so 
 <!-------- ----------
 -- WEEK 5
 ---------- --------->
+## () - WEEK 5 - SUN 03/26/2023 - FRI 03/31/2023
 
 <!-- forpost/tracks r1 and demos -->
 * () forpost: threejs-examples-tracks - work on R1 of the module.
 <!-- blog_posts npm script -->
 * () start an npm script replacement for the main gruntfile 
+<!-- videoground-content -->
+* () videoground-beta-world - start an all new project that has to do with morph attributes
 
 <!-------- ----------
 -- WEEK 4
@@ -38,23 +41,34 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## () - WEEK 4 - SUN 03/19/2023 - SAT 03/25/2023
 
 ### () - SAT 03/25/2023
-<!-- videoground-content -->
-* () videoground-beta-world - start an all new project that has to do with morph attributes
+<!-- forpost/edit -->
+* () edit: threejs-euler- sections on quaternion and link to post
+* () edit: threejs-object3d-rotation - section on quaternion and link to post
+* () edit: threejs-object3d-lookat - section on quaternion and link to post
+
+* () forpost: threejs-quaternion - new demo on the methods used to rotate the sphere
+* () forpost: threejs-quaternion - new section on geting axis and angle
+* () edit: threejs-quaternion - expand with new sections
+
+
+
+* () forpost: threejs-vector3-apply-euler - update demos to r146 style
+* () edit: threejs-vector3-apply-euler - proof read opening and intro
+
+* () forpost: threejs-getting-started - take a look at current demos
+* () edit: threejs-getting-started - proof read opening and intro
+
+
 <!-- videoground R8 -->
 * () videoground r8 - 
 
-
 ### () - FRI 03/24/2023
-<!-- forpost/new -->
-* () start post #1033 on threejs-
-<!-- forpost/edit -->
-* () edit: threejs-vector3-apply-euler
+* (done) start post #1033 on threejs-quaternion
 
 ### () - THU 03/23/2023
-<!-- forpost/edit -->
-* () edit: threejs-cube-texture - edit opening and getting started
-* () forpost: threejs-examples-breath-module - work more on r1 of the module
-* () edit: threejs-examples-breath-module - expand the post if r1 is done
+* (done) edit: threejs-cube-texture - edit opening and getting started
+* (done) forpost: threejs-examples-breath-module - work more on r1 of the module
+* (done) edit: threejs-examples-breath-module - expand the post if r1 is done
 
 ### () - WED 03/22/2023
 * (done) edit: threejs-torus - proof read and update demos to r146
