post-check;id#: 855;v: 1.38;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -42,7 +42,7 @@ I would like to focus on my beta world content first and formost. When doing so 
 
 ### () - SAT 03/25/2023
 <!-- forpost/edit -->
-* () edit: threejs-euler- sections on quaternion and link to post
+* (done) edit: threejs-euler- sections on quaternion and link to post
 * () edit: threejs-object3d-rotation - section on quaternion and link to post
 * () edit: threejs-object3d-lookat - section on quaternion and link to post
 
