--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -28,6 +28,11 @@ I would like to focus on my beta world content first and formost. When doing so 
 ---------- --------->
 ## () - WEEK 5 - SUN 03/26/2023 - FRI 03/31/2023
 
+### () - SUN 03/26/2023
+<!-- forpost/edit -->
+* () forpost: threejs-object3d-rotation - update demos to r146 style
+* () edit: threejs-object3d-rotation - embed new code examples
+
 <!-- forpost/tracks r1 and demos -->
 * () forpost: threejs-examples-tracks - work on R1 of the module.
 <!-- blog_posts npm script -->
@@ -43,7 +48,9 @@ I would like to focus on my beta world content first and formost. When doing so 
 ### () - SAT 03/25/2023
 <!-- forpost/edit -->
 * (done) edit: threejs-euler- sections on quaternion and link to post
-* () edit: threejs-object3d-rotation - section on quaternion and link to post
+* (done) edit: threejs-object3d-rotation - section on quaternion and link to post
+
+
 * () edit: threejs-object3d-lookat - section on quaternion and link to post
 
 * () forpost: threejs-quaternion - new demo on the methods used to rotate the sphere
@@ -58,6 +65,8 @@ I would like to focus on my beta world content first and formost. When doing so 
 * () forpost: threejs-getting-started - take a look at current demos
 * () edit: threejs-getting-started - proof read opening and intro
 
+<!-- videoground-content -->
+* () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
 
 <!-- videoground R8 -->
 * () videoground r8 - 
