post-check;id#: 167;v: 1.46;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -32,6 +32,8 @@ I would like to focus on my beta world content first and formost. When doing so 
 <!-- forpost/edit -->
 * () forpost: threejs-object3d-rotation - update demos to r146 style
 * () edit: threejs-object3d-rotation - embed new code examples
+* () forpost: threejs-getting-started - update current demos to r146 style
+* () edit: threejs-getting-started - edit sections
 
 <!-- forpost/tracks r1 and demos -->
 * () forpost: threejs-examples-tracks - work on R1 of the module.
@@ -49,21 +51,18 @@ I would like to focus on my beta world content first and formost. When doing so 
 <!-- forpost/edit -->
 * (done) edit: threejs-euler- sections on quaternion and link to post
 * (done) edit: threejs-object3d-rotation - section on quaternion and link to post
+* (done) edit: threejs-object3d-lookat - section on quaternion and link to post
+* (done) edit: threejs-getting-started - proof read opening and intro
 
+* () forpost: threejs-vector3-apply-euler - update demos to r146 style
+* () edit: threejs-vector3-apply-euler - proof read opening and intro
 
-* () edit: threejs-object3d-lookat - section on quaternion and link to post
 
 * () forpost: threejs-quaternion - new demo on the methods used to rotate the sphere
 * () forpost: threejs-quaternion - new section on geting axis and angle
 * () edit: threejs-quaternion - expand with new sections
 
 
-
-* () forpost: threejs-vector3-apply-euler - update demos to r146 style
-* () edit: threejs-vector3-apply-euler - proof read opening and intro
-
-* () forpost: threejs-getting-started - take a look at current demos
-* () edit: threejs-getting-started - proof read opening and intro
 
 <!-- videoground-content -->
 * () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
