--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -53,10 +53,8 @@ I would like to focus on my beta world content first and formost. When doing so 
 * (done) edit: threejs-object3d-rotation - section on quaternion and link to post
 * (done) edit: threejs-object3d-lookat - section on quaternion and link to post
 * (done) edit: threejs-getting-started - proof read opening and intro
-
-* () forpost: threejs-vector3-apply-euler - update demos to r146 style
-* () edit: threejs-vector3-apply-euler - proof read opening and intro
-
+* (done) forpost: threejs-vector3-apply-euler - update demos to r146 style
+* (done) edit: threejs-vector3-apply-euler - proof read opening and intro
 
 * () forpost: threejs-quaternion - new demo on the methods used to rotate the sphere
 * () forpost: threejs-quaternion - new section on geting axis and angle
