post-check;id#: 1033;v: 1.13;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -55,16 +55,12 @@ I would like to focus on my beta world content first and formost. When doing so 
 * (done) edit: threejs-getting-started - proof read opening and intro
 * (done) forpost: threejs-vector3-apply-euler - update demos to r146 style
 * (done) edit: threejs-vector3-apply-euler - proof read opening and intro
-
-* () forpost: threejs-quaternion - new demo on the methods used to rotate the sphere
-* () forpost: threejs-quaternion - new section on geting axis and angle
-* () edit: threejs-quaternion - expand with new sections
-
-
+* (done) forpost: threejs-quaternion - new demo on the methods used to rotate the sphere
+* (done) edit: threejs-quaternion - expand with new sections
 
 <!-- videoground-content -->
 * () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
-
+* () videoground-blog-posts: threejs-quaternion - video2 based on s3-1-loop demo from the post
 <!-- videoground R8 -->
 * () videoground r8 - 
 
