--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -28,19 +28,24 @@ I would like to focus on my beta world content first and formost. When doing so 
 ---------- --------->
 ## () - WEEK 5 - SUN 03/26/2023 - FRI 03/31/2023
 
-### () - SUN 03/26/2023
-<!-- forpost/edit -->
-* () forpost: threejs-object3d-rotation - update demos to r146 style
-* () edit: threejs-object3d-rotation - embed new code examples
-* () forpost: threejs-getting-started - update current demos to r146 style
-* () edit: threejs-getting-started - edit sections
-
 <!-- forpost/tracks r1 and demos -->
 * () forpost: threejs-examples-tracks - work on R1 of the module.
 <!-- blog_posts npm script -->
 * () start an npm script replacement for the main gruntfile 
 <!-- videoground-content -->
 * () videoground-beta-world - start an all new project that has to do with morph attributes
+
+### () - MON 03/27/2023
+<!-- forpost/edit -->
+* () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
+<!-- forpost/edit -->
+* () forpost: threejs-object3d-rotation - update demos to r146 style
+* () edit: threejs-object3d-rotation - embed new code examples
+* () forpost: threejs-getting-started - update current demos to r146 style
+* () edit: threejs-getting-started - edit sections
+
+### () - SUN 03/26/2023
+* (done) new three-quaternion demos
 
 <!-------- ----------
 -- WEEK 4
