--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -36,13 +36,20 @@ I would like to focus on my beta world content first and formost. When doing so 
 * () videoground-beta-world - start an all new project that has to do with morph attributes
 
 ### () - MON 03/27/2023
+* (done) forpost: threejs-object3d-rotation - update demos to r146 style
+* (done) edit: threejs-object3d-rotation - embed new code examples
 <!-- forpost/edit -->
 * () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
 <!-- forpost/edit -->
-* () forpost: threejs-object3d-rotation - update demos to r146 style
-* () edit: threejs-object3d-rotation - embed new code examples
+
 * () forpost: threejs-getting-started - update current demos to r146 style
 * () edit: threejs-getting-started - edit sections
+
+<!-- videoground-content -->
+* () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
+* () videoground-blog-posts: threejs-quaternion - video2 based on s3-1-loop demo from the post
+<!-- videoground R8 -->
+* () videoground r8 - 
 
 ### () - SUN 03/26/2023
 * (done) new three-quaternion demos
@@ -63,11 +70,6 @@ I would like to focus on my beta world content first and formost. When doing so 
 * (done) forpost: threejs-quaternion - new demo on the methods used to rotate the sphere
 * (done) edit: threejs-quaternion - expand with new sections
 
-<!-- videoground-content -->
-* () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
-* () videoground-blog-posts: threejs-quaternion - video2 based on s3-1-loop demo from the post
-<!-- videoground R8 -->
-* () videoground r8 - 
 
 ### () - FRI 03/24/2023
 * (done) start post #1033 on threejs-quaternion
