post-check;id#: 167;v: 1.47;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -39,6 +39,7 @@ I would like to focus on my beta world content first and formost. When doing so 
 * (done) forpost: threejs-object3d-rotation - update demos to r146 style
 * (done) edit: threejs-object3d-rotation - embed new code examples
 <!-- forpost/edit -->
+* () forpost: threejs-quaternion - gimbal lock section
 * () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
 <!-- forpost/edit -->
 
