--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -32,25 +32,29 @@ I would like to focus on my beta world content first and formost. When doing so 
 * () forpost: threejs-examples-tracks - work on R1 of the module.
 <!-- blog_posts npm script -->
 * () start an npm script replacement for the main gruntfile 
+
+### () - FRI 03/31/2023
+* () start post # 1034 threejs-
+
+### () - THU 03/30/2023
+
+### () - WED 03/29/2023
+
+### () - TUE 03/28/2023
+<!-- forpost/edit -->
+* () forpost: threejs-quaternion - gimbal lock section
+* () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
 <!-- videoground-content -->
+* () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
 * () videoground-beta-world - start an all new project that has to do with morph attributes
+<!-- videoground R8 -->
+* () videoground r8 - export to frames dialog
 
 ### () - MON 03/27/2023
 * (done) forpost: threejs-object3d-rotation - update demos to r146 style
 * (done) edit: threejs-object3d-rotation - embed new code examples
-<!-- forpost/edit -->
-* () forpost: threejs-quaternion - gimbal lock section
-* () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
-<!-- forpost/edit -->
-
-* () forpost: threejs-getting-started - update current demos to r146 style
-* () edit: threejs-getting-started - edit sections
-
-<!-- videoground-content -->
-* () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
-* () videoground-blog-posts: threejs-quaternion - video2 based on s3-1-loop demo from the post
-<!-- videoground R8 -->
-* () videoground r8 - 
+* (done) forpost: threejs-getting-started - update current demos to r146 style
+* (done) edit: threejs-getting-started - edit sections
 
 ### () - SUN 03/26/2023
 * (done) new three-quaternion demos
@@ -70,7 +74,7 @@ I would like to focus on my beta world content first and formost. When doing so 
 * (done) edit: threejs-vector3-apply-euler - proof read opening and intro
 * (done) forpost: threejs-quaternion - new demo on the methods used to rotate the sphere
 * (done) edit: threejs-quaternion - expand with new sections
-
+* (done) videoground-blog-posts: threejs-quaternion - video2 based on s3-1-loop demo from the post
 
 ### () - FRI 03/24/2023
 * (done) start post #1033 on threejs-quaternion
