post-check;id#: 976;v: 1.35;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -41,8 +41,8 @@ I would like to focus on my beta world content first and formost. When doing so 
 ### () - WED 03/29/2023
 
 ### () - TUE 03/28/2023
+* (done) forpost: threejs-quaternion - gimbal lock section
 <!-- forpost/edit -->
-* () forpost: threejs-quaternion - gimbal lock section
 * () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
 <!-- videoground-content -->
 * () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
