--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -37,12 +37,16 @@ I would like to focus on my beta world content first and formost. When doing so 
 * () start post # 1034 threejs-
 
 ### () - THU 03/30/2023
+* () edit: threejs-data-texture -
+* () edit: threejs-buffer-geometry-compute-bounding-box -
 
 ### () - WED 03/29/2023
+* () edit: threejs-vector3-lerp
 
 ### () - TUE 03/28/2023
 * (done) forpost: threejs-quaternion - gimbal lock section
 <!-- forpost/edit -->
+* () edit: threejs-edges-geometry - update for post
 * () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
 <!-- videoground-content -->
 * () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
