todo update for 03/28/2023

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -45,8 +45,9 @@ I would like to focus on my beta world content first and formost. When doing so 
 
 ### () - TUE 03/28/2023
 * (done) forpost: threejs-quaternion - gimbal lock section
+* (done) edit: threejs-edges-geometry - update for post
 <!-- forpost/edit -->
-* () edit: threejs-edges-geometry - update for post
+* () forpost: threejs-quaternion - start userspace section
 * () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
 <!-- videoground-content -->
 * () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
