post-check;id#: 987;v: 1.25;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -41,8 +41,9 @@ I would like to focus on my beta world content first and formost. When doing so 
 * () edit: threejs-buffer-geometry-compute-bounding-box -
 
 ### () - WED 03/29/2023
+* (done) edit: threejs-vector3-lerp - edit opening and intro
 <!-- forpost/edit -->
-* () edit: threejs-vector3-lerp
+* () edit: threejs-vector3-lerp - update demos to r146 style
 * () forpost: threejs-quaternion - start userspace section
 * () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
 <!-- videoground-content -->
