post-check;id#: 987;v: 1.29;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -42,11 +42,15 @@ I would like to focus on my beta world content first and formost. When doing so 
 
 ### () - WED 03/29/2023
 * (done) edit: threejs-vector3-lerp - edit opening and intro
+* (done) edit: threejs-vector3-lerp - update demos to r146 style
 <!-- forpost/edit -->
-* () edit: threejs-vector3-lerp - update demos to r146 style
+* () forpost: threejs-vector3-lerp - new curve section
+* () forpost: threejs-vector3-lerp - new animation loop demo
+* () edit: threejs-vector3-lerp - write about new demos
 * () forpost: threejs-quaternion - start userspace section
 * () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
 <!-- videoground-content -->
+* () videoground-blog-posts - threejs-vector3-lerp - video2
 * () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
 * () videoground-beta-world - start an all new project that has to do with morph attributes
 <!-- videoground R8 -->
