--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -44,7 +44,7 @@ I would like to focus on my beta world content first and formost. When doing so 
 * (done) edit: threejs-vector3-lerp - edit opening and intro
 * (done) edit: threejs-vector3-lerp - update demos to r146 style
 <!-- forpost/edit -->
-* () forpost: threejs-vector3-lerp - new curve section
+* (done) forpost: threejs-vector3-lerp - new curve section
 * () forpost: threejs-vector3-lerp - new animation loop demo
 * () edit: threejs-vector3-lerp - write about new demos
 * () forpost: threejs-quaternion - start userspace section
