post-check;id#: 1033;v: 1.18;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -37,21 +37,23 @@ I would like to focus on my beta world content first and formost. When doing so 
 * () start post # 1034 threejs-
 
 ### () - THU 03/30/2023
-* () edit: threejs-data-texture -
-* () edit: threejs-buffer-geometry-compute-bounding-box -
+<!-- forpost/edit -->
+* () edit: threejs-data-texture - proof read opening and intro
+* () edit: threejs-buffer-geometry-compute-bounding-box - proof read opening and intro
+* () forpost: threejs-vector3-lerp - new animation loop demo
 
 ### () - WED 03/29/2023
 * (done) edit: threejs-vector3-lerp - edit opening and intro
 * (done) edit: threejs-vector3-lerp - update demos to r146 style
-<!-- forpost/edit -->
 * (done) forpost: threejs-vector3-lerp - new curve section
-* () forpost: threejs-vector3-lerp - new animation loop demo
-* () edit: threejs-vector3-lerp - write about new demos
-* () forpost: threejs-quaternion - start userspace section
+* (done) edit: threejs-vector3-lerp - write about new demos
+* (done) forpost: threejs-quaternion - start userspace section
+<!-- forpost/edit -->
 * () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
+* () edit: threejs-quaternion - write about ew demos
 <!-- videoground-content -->
-* () videoground-blog-posts - threejs-vector3-lerp - video2
 * () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
+* () videoground-blog-posts - threejs-vector3-lerp - video2
 * () videoground-beta-world - start an all new project that has to do with morph attributes
 <!-- videoground R8 -->
 * () videoground r8 - export to frames dialog
