post-check;id#: 1008;v: 1.15;

--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -39,6 +39,7 @@ I would like to focus on my beta world content first and formost. When doing so 
 ### () - THU 03/30/2023
 * (done) edit: threejs-data-texture - proof read opening and intro
 * (done) edit: threejs-buffer-geometry-compute-bounding-box - proof read opening and intro
+* (done) edit: threejs-buffer-geometry-compute-bounding-box - new loop demo
 <!-- forpost/edit -->
 * () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
 * () edit: threejs-quaternion - write about new demos
