--- a/todo/today/todo_2023_03.md
+++ b/todo/today/todo_2023_03.md
@@ -34,15 +34,19 @@ I would like to focus on my beta world content first and formost. When doing so 
 * () start an npm script replacement for the main gruntfile 
 
 ### () - FRI 03/31/2023
-* () start post # 1034 threejs-
+* () start post # 1034 threejs-quaternion-premultiply
 
 ### () - THU 03/30/2023
 * (done) edit: threejs-data-texture - proof read opening and intro
 * (done) edit: threejs-buffer-geometry-compute-bounding-box - proof read opening and intro
 * (done) edit: threejs-buffer-geometry-compute-bounding-box - new loop demo
+* (done) forpost: threejs-getting-started - finish up s3-1-stocastic-basic
+* (done) edit: threejs-getting-started - write about new s3-1-stocastic-basic example
 <!-- forpost/edit -->
 * () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
 * () edit: threejs-quaternion - write about new demos
+<!-- forpost/new -->
+* () forpost: new threejs-quaternion-premultiply for post folder
 <!-- videoground-content -->
 * () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
 * () videoground-blog-posts - threejs-vector3-lerp - video2
