--- a/todo/today/2023/todo_2023_03.md
+++ b/todo/today/2023/todo_2023_03.md
@@ -29,6 +29,7 @@ I would like to focus on my beta world content first and formost. When doing so 
 ## () - WEEK 5 - SUN 03/26/2023 - FRI 03/31/2023
 
 ### () - FRI 03/31/2023
+* (done) forpost: new threejs-quaternion-premultiply for post folder
 * (done) forpost: threejs-quaternion-premultiply - start for post folder
 * (done) start post # 1034 threejs-quaternion-premultiply
 
