--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -11,26 +11,51 @@ Should still focus more so on the beta world.
 * () r146 prototype: animation-vector-keyframe-track - Have a good hello world done, might start a post with this.
 * () r146 prototype: examples-alpha-module - add a curve method, and tools for displaying current state
 * () r146 prototype: examples-timeline - display current state tools
-* () r146 prototype: quaternion - 
 * () r146 prototype: animation-quaternion-keyframe-track -
 * () r146 prototype: animation-clip -
 * () r146 prototype: animation-mixer -
 * () r146 prototype: materials-depth-func -
-* () r146 prototype: materials-side -
-* () r146 prototype: materials-blending -
+* () r146 prototype: materials-side - 
+* () r146 prototype: materials-blending - 
 * () r146 prototype: euler-set-from-quaternion -
-* () r146 prototype: object3d-remove
+* () r146 prototype: object3d-remove 
 
 <!-------- ----------
 -- WEEK 2
 ---------- --------->
 ## () - WEEK 2 - SUN 04/02/2023 - SAT 04/08/2023
 
+### () - SAT 04/08/2023
+
+### () - FRI 04/07/2023
+
+
+### () - THU 04/06/2023
+
+
+### () - WED 04/05/2023
+<!-- forpost/new -->
+* () threejs-quaternion-setfromunitvectors - any final improvements for source code examples
+* () start post #1035 on threejs-quaternion-setfromunitvectors
+
 ### () - TUE 04/04/2023
+<!-- forpost/new -->
+* () threejs-quaternion-setfromunitvectors - start one stochastic loop example based off of new getting started template
 
 ### () - MON 04/03/2023
+<!-- forpost/new -->
+* () threejs-quaternion-setfromunitvectors - start one animation loop example
 
 ### () - SUN 04/02/2023
+<!-- forpost/new -->
+* () threejs-quaternion-setfromunitvectors - start for post folder with at least 1 basic example
+
+<!-- videoground R8 -->
+* () videoground r8 - export to frames dialog
+<!-- forpost/tracks r1 and demos -->
+* () forpost: threejs-examples-tracks - work on R1 of the module.
+<!-- blog_posts npm script -->
+* () start an npm script replacement for the main gruntfile 
 
 <!-------- ----------
 -- WEEK 1
@@ -39,17 +64,10 @@ Should still focus more so on the beta world.
 
 ### () - SAT 04/01/2023
 <!-- forpost/edit -->
-* () forpost: threejs-quaternion - start new section on Stochastic loop demos starting with the r146 demo
-* () edit: threejs-quaternion - write about new demos
-<!-- forpost/new -->
-* () forpost: new threejs-quaternion-premultiply for post folder
+* (done) edit: threejs-quaternion-premultiply - expand on current examples
+* () forpost: threejs-quaternion-premultiply - expand basic section
 <!-- videoground-content -->
 * () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
 * () videoground-blog-posts - threejs-vector3-lerp - video2
 * () videoground-beta-world - start an all new project that has to do with morph attributes
-<!-- videoground R8 -->
-* () videoground r8 - export to frames dialog
-<!-- forpost/tracks r1 and demos -->
-* () forpost: threejs-examples-tracks - work on R1 of the module.
-<!-- blog_posts npm script -->
-* () start an npm script replacement for the main gruntfile 
+
