post-check;id#: 1034;v: 1.9;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -63,11 +63,12 @@ Should still focus more so on the beta world.
 ## () - WEEK 1 - SAT 04/01/2023
 
 ### () - SAT 04/01/2023
-<!-- forpost/edit -->
 * (done) edit: threejs-quaternion-premultiply - expand on current examples
-* () forpost: threejs-quaternion-premultiply - expand basic section
+* (done) forpost: threejs-quaternion-premultiply - expand basic section
 <!-- videoground-content -->
-* () videoground-blog-posts: threejs-euler - video2 based on s2-2-vector3-multiplyscalar
-* () videoground-blog-posts - threejs-vector3-lerp - video2
+* () videoground-blog-posts: threejs-quaternion-premultiply - video1
+<!--  site -->
+* () build and publish
+<!-- videoground-content -->
 * () videoground-beta-world - start an all new project that has to do with morph attributes
 
