--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -20,6 +20,12 @@ Should still focus more so on the beta world.
 * () r146 prototype: euler-set-from-quaternion -
 * () r146 prototype: object3d-remove 
 
+## LONG TERM
+<!-- forpost/tracks r1 and demos -->
+* () forpost: threejs-examples-tracks - work on R1 of the module.
+<!-- blog_posts npm script -->
+* () start an npm script replacement for the main gruntfile 
+
 <!-------- ----------
 -- WEEK 2
 ---------- --------->
@@ -34,29 +40,28 @@ Should still focus more so on the beta world.
 
 
 ### () - WED 04/05/2023
+
+
+### () - TUE 04/04/2023
 <!-- forpost/new -->
 * () threejs-quaternion-setfromunitvectors - any final improvements for source code examples
 * () start post #1035 on threejs-quaternion-setfromunitvectors
 
-### () - TUE 04/04/2023
-<!-- forpost/new -->
-* () threejs-quaternion-setfromunitvectors - start one stochastic loop example based off of new getting started template
-
 ### () - MON 04/03/2023
 <!-- forpost/new -->
-* () threejs-quaternion-setfromunitvectors - start one animation loop example
+* () threejs-quaternion-setfromunitvectors - one more demo in the basic section
+<!-- forpost/edit -->
+* () forpost: threejs-quaternion - start new methods section demo for setfromunitvectors
+* () forpost: threejs-quaternion - fix any older demos now that I know better as to what the deal is with the core set of methods thus far
+* () edit: threejs-quaternion - write about new demo, edit any other sections where this have changed
 
 ### () - SUN 04/02/2023
-<!-- forpost/new -->
-* () threejs-quaternion-setfromunitvectors - start for post folder with at least 1 basic example
-
+* (done) threejs-quaternion-setfromunitvectors - start for post folder with at least 1 basic example
+* (done) forpost: threejs-quaternion-setfromunitvectors - start one animation loop example
+<!-- videoground-content -->
+* () videoground-beta-world - start an all new project that has to do with morph attributes
 <!-- videoground R8 -->
 * () videoground r8 - export to frames dialog
-<!-- forpost/tracks r1 and demos -->
-* () forpost: threejs-examples-tracks - work on R1 of the module.
-<!-- blog_posts npm script -->
-* () start an npm script replacement for the main gruntfile 
-
 <!-------- ----------
 -- WEEK 1
 ---------- --------->
@@ -65,10 +70,6 @@ Should still focus more so on the beta world.
 ### () - SAT 04/01/2023
 * (done) edit: threejs-quaternion-premultiply - expand on current examples
 * (done) forpost: threejs-quaternion-premultiply - expand basic section
-<!-- videoground-content -->
-* () videoground-blog-posts: threejs-quaternion-premultiply - video1
-<!--  site -->
-* () build and publish
-<!-- videoground-content -->
-* () videoground-beta-world - start an all new project that has to do with morph attributes
+* (done) videoground-blog-posts: threejs-quaternion-premultiply - video1<!--  site -->
+* (done) build and publish
 
