todo update for 04/03/2023

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -20,11 +20,14 @@ Should still focus more so on the beta world.
 * () r146 prototype: euler-set-from-quaternion -
 * () r146 prototype: object3d-remove 
 
-## LONG TERM
+## Things I would like to get to at some point
+
 <!-- forpost/tracks r1 and demos -->
 * () forpost: threejs-examples-tracks - work on R1 of the module.
 <!-- blog_posts npm script -->
 * () start an npm script replacement for the main gruntfile 
+<!-- videoground content -->
+* () videoground-beta-world - start an all new project that has to do with morph attributes
 
 <!-------- ----------
 -- WEEK 2
@@ -34,34 +37,53 @@ Should still focus more so on the beta world.
 ### () - SAT 04/08/2023
 
 ### () - FRI 04/07/2023
-
+<!-- forpost/edit -->
+* () threejs-buffer-geometry-attributes-uv - 
 
 ### () - THU 04/06/2023
-
+<!-- forpost/edit -->
+* () threejs-texture-loader - 
 
 ### () - WED 04/05/2023
-
+<!-- forpost/edit -->
+* () threejs-plane - 
 
 ### () - TUE 04/04/2023
+<!-- forpost/edit -->
+* () threejs-shape - 
+
+
+
 <!-- forpost/new -->
 * () threejs-quaternion-setfromunitvectors - any final improvements for source code examples
 * () start post #1035 on threejs-quaternion-setfromunitvectors
 
 ### () - MON 04/03/2023
-<!-- forpost/new -->
-* () threejs-quaternion-setfromunitvectors - one more demo in the basic section
 <!-- forpost/edit -->
+* () forpost: threejs-raycaster - update for post folder demos
+* () edit: threejs-raycaster - proof read, add any updated code examples
 * () forpost: threejs-quaternion - start new methods section demo for setfromunitvectors
 * () forpost: threejs-quaternion - fix any older demos now that I know better as to what the deal is with the core set of methods thus far
 * () edit: threejs-quaternion - write about new demo, edit any other sections where this have changed
+<!-- forpost/new -->
+* () threejs-quaternion-setfromunitvectors - one more demo in the basic section
+<!-- videoground-content -->
+* () videoground-blog-posts - new video for threejs-raycaster
+* () videoground-beta-world - new 5 minute video using breathing basic
+* () videoground-beta-world - work on breathing-water
+<!-- electionjs examples -->
+* () electionjs-examples: start new mrsun prototype
+<!-- videoground R8 -->
+* () videoground r8 - VIDEO.render method support
+* () videoground r8 - can return a promise in update methods
+* () videoground r8 - export to frames dialog
 
 ### () - SUN 04/02/2023
 * (done) threejs-quaternion-setfromunitvectors - start for post folder with at least 1 basic example
 * (done) forpost: threejs-quaternion-setfromunitvectors - start one animation loop example
 <!-- videoground-content -->
-* () videoground-beta-world - start an all new project that has to do with morph attributes
-<!-- videoground R8 -->
-* () videoground r8 - export to frames dialog
+
+
 <!-------- ----------
 -- WEEK 1
 ---------- --------->
