post-check;id#: 869;v: 1.32;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -60,8 +60,8 @@ Should still focus more so on the beta world.
 
 ### () - MON 04/03/2023
 <!-- forpost/edit -->
-* () forpost: threejs-raycaster - update for post folder demos
-* () edit: threejs-raycaster - proof read, add any updated code examples
+* (done) forpost: threejs-raycaster - update for post folder demos
+* (done) edit: threejs-raycaster - proof read, add any updated code examples
 * () forpost: threejs-quaternion - start new methods section demo for setfromunitvectors
 * () forpost: threejs-quaternion - fix any older demos now that I know better as to what the deal is with the core set of methods thus far
 * () edit: threejs-quaternion - write about new demo, edit any other sections where this have changed
