post-check;id#: 1033;v: 1.20;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -59,12 +59,10 @@ Should still focus more so on the beta world.
 * () start post #1035 on threejs-quaternion-setfromunitvectors
 
 ### () - MON 04/03/2023
-<!-- forpost/edit -->
 * (done) forpost: threejs-raycaster - update for post folder demos
 * (done) edit: threejs-raycaster - proof read, add any updated code examples
-* () forpost: threejs-quaternion - start new methods section demo for setfromunitvectors
-* () forpost: threejs-quaternion - fix any older demos now that I know better as to what the deal is with the core set of methods thus far
-* () edit: threejs-quaternion - write about new demo, edit any other sections where this have changed
+* (done) forpost: threejs-quaternion - start new methods section demo for setfromunitvectors
+* (done) edit: threejs-quaternion - write about new demo
 <!-- forpost/new -->
 * () threejs-quaternion-setfromunitvectors - one more demo in the basic section
 <!-- videoground-content -->
