todo update for 04/03/2023

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -63,8 +63,7 @@ Should still focus more so on the beta world.
 * (done) edit: threejs-raycaster - proof read, add any updated code examples
 * (done) forpost: threejs-quaternion - start new methods section demo for setfromunitvectors
 * (done) edit: threejs-quaternion - write about new demo
-<!-- forpost/new -->
-* () threejs-quaternion-setfromunitvectors - one more demo in the basic section
+* (done) threejs-quaternion-setfromunitvectors - one more demo in the basic section
 <!-- videoground-content -->
 * () videoground-blog-posts - new video for threejs-raycaster
 * () videoground-beta-world - new 5 minute video using breathing basic
