--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -57,6 +57,8 @@ Should still focus more so on the beta world.
 <!-- forpost/new -->
 * () threejs-quaternion-setfromunitvectors - any final improvements for source code examples
 * () start post #1035 on threejs-quaternion-setfromunitvectors
+<!-- videoground content -->
+* () videoground-beta-world - work on breathing-water
 
 ### () - MON 04/03/2023
 * (done) forpost: threejs-raycaster - update for post folder demos
@@ -64,12 +66,11 @@ Should still focus more so on the beta world.
 * (done) forpost: threejs-quaternion - start new methods section demo for setfromunitvectors
 * (done) edit: threejs-quaternion - write about new demo
 * (done) threejs-quaternion-setfromunitvectors - one more demo in the basic section
-<!-- videoground-content -->
-* () videoground-blog-posts - new video for threejs-raycaster
-* () videoground-beta-world - new 5 minute video using breathing basic
-* () videoground-beta-world - work on breathing-water
+* (done) videoground-blog-posts - new video for threejs-raycaster
 <!-- electionjs examples -->
 * () electionjs-examples: start new mrsun prototype
+<!-- videoground-content -->
+* () videoground-beta-world - new 5 minute video using breathing basic
 <!-- videoground R8 -->
 * () videoground r8 - VIDEO.render method support
 * () videoground r8 - can return a promise in update methods
