--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -49,16 +49,21 @@ Should still focus more so on the beta world.
 * () threejs-plane - 
 
 ### () - TUE 04/04/2023
+<!-- electionjs examples -->
+* () electionjs-examples: work on land state for mrsun prototype
 <!-- forpost/edit -->
 * () threejs-shape - 
-
-
-
 <!-- forpost/new -->
 * () threejs-quaternion-setfromunitvectors - any final improvements for source code examples
 * () start post #1035 on threejs-quaternion-setfromunitvectors
 <!-- videoground content -->
 * () videoground-beta-world - work on breathing-water
+<!-- videoground-content -->
+* () videoground-beta-world - new 5 minute video using breathing basic
+<!-- videoground R8 -->
+* () videoground r8 - VIDEO.render method support
+* () videoground r8 - can return a promise in update methods
+* () videoground r8 - export to frames dialog
 
 ### () - MON 04/03/2023
 * (done) forpost: threejs-raycaster - update for post folder demos
@@ -67,14 +72,7 @@ Should still focus more so on the beta world.
 * (done) edit: threejs-quaternion - write about new demo
 * (done) threejs-quaternion-setfromunitvectors - one more demo in the basic section
 * (done) videoground-blog-posts - new video for threejs-raycaster
-<!-- electionjs examples -->
-* () electionjs-examples: start new mrsun prototype
-<!-- videoground-content -->
-* () videoground-beta-world - new 5 minute video using breathing basic
-<!-- videoground R8 -->
-* () videoground r8 - VIDEO.render method support
-* () videoground r8 - can return a promise in update methods
-* () videoground r8 - export to frames dialog
+* (done) electionjs-examples: start new mrsun prototype
 
 ### () - SUN 04/02/2023
 * (done) threejs-quaternion-setfromunitvectors - start for post folder with at least 1 basic example
