post-check;id#: 879;v: 1.45;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -52,7 +52,7 @@ Should still focus more so on the beta world.
 <!-- electionjs examples -->
 * () electionjs-examples: work on land state for mrsun prototype
 <!-- forpost/edit -->
-* () threejs-shape - 
+* (done) threejs-shape - proof read opening and getting started
 <!-- forpost/new -->
 * () threejs-quaternion-setfromunitvectors - any final improvements for source code examples
 * () start post #1035 on threejs-quaternion-setfromunitvectors
