todo update for 04/04/2023

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -52,7 +52,9 @@ Should still focus more so on the beta world.
 <!-- electionjs examples -->
 * () electionjs-examples: work on land state for mrsun prototype
 <!-- forpost/edit -->
-* (done) threejs-shape - proof read opening and getting started
+* (done) edit: threejs-shape - proof read opening and getting started
+* (done) forpost: threejs-shape - r146 style update
+* () edit: threejs-shape - use new demos, proof read sections
 <!-- forpost/new -->
 * () threejs-quaternion-setfromunitvectors - any final improvements for source code examples
 * () start post #1035 on threejs-quaternion-setfromunitvectors
