post-check;id#: 879;v: 1.47;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -47,6 +47,9 @@ Should still focus more so on the beta world.
 ### () - WED 04/05/2023
 <!-- forpost/edit -->
 * () threejs-plane - 
+<!-- forpost/new -->
+* () threejs-quaternion-setfromunitvectors - any final improvements for source code examples
+* () start post #1035 on threejs-quaternion-setfromunitvectors
 
 ### () - TUE 04/04/2023
 <!-- electionjs examples -->
@@ -54,10 +57,7 @@ Should still focus more so on the beta world.
 <!-- forpost/edit -->
 * (done) edit: threejs-shape - proof read opening and getting started
 * (done) forpost: threejs-shape - r146 style update
-* () edit: threejs-shape - use new demos, proof read sections
-<!-- forpost/new -->
-* () threejs-quaternion-setfromunitvectors - any final improvements for source code examples
-* () start post #1035 on threejs-quaternion-setfromunitvectors
+* (done) edit: threejs-shape - use new demos
 <!-- videoground content -->
 * () videoground-beta-world - work on breathing-water
 <!-- videoground-content -->
