--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -35,16 +35,24 @@ Should still focus more so on the beta world.
 ## () - WEEK 2 - SUN 04/02/2023 - SAT 04/08/2023
 
 ### () - SAT 04/08/2023
+<!-- electionjs examples -->
+* () electionjs-examples: examples-mrsun - 
 
 ### () - FRI 04/07/2023
+<!-- electionjs examples -->
+* () electionjs-examples: examples-mrsun - 
 <!-- forpost/edit -->
 * () threejs-buffer-geometry-attributes-uv - 
 
 ### () - THU 04/06/2023
+<!-- electionjs examples -->
+* () electionjs-examples: examples-mrsun - 
 <!-- forpost/edit -->
 * () threejs-texture-loader - 
 
 ### () - WED 04/05/2023
+<!-- electionjs examples -->
+* () electionjs-examples: examples-mrsun - work more on blocks
 <!-- forpost/edit -->
 * () threejs-plane - 
 <!-- forpost/new -->
@@ -53,8 +61,7 @@ Should still focus more so on the beta world.
 
 ### () - TUE 04/04/2023
 <!-- electionjs examples -->
-* () electionjs-examples: work on land state for mrsun prototype
-<!-- forpost/edit -->
+* (done) electionjs-examples: work on land state for mrsun prototype
 * (done) edit: threejs-shape - proof read opening and getting started
 * (done) forpost: threejs-shape - r146 style update
 * (done) edit: threejs-shape - use new demos
