--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -39,32 +39,19 @@ Should still focus more so on the beta world.
 * () electionjs-examples: examples-mrsun - 
 
 ### () - FRI 04/07/2023
+<!-- forpost/new -->
+* () threejs-quaternion-setfromunitvectors - any final improvements for source code examples
+* () start post #1035 on threejs-quaternion-setfromunitvectors
 <!-- electionjs examples -->
 * () electionjs-examples: examples-mrsun - 
 <!-- forpost/edit -->
 * () threejs-buffer-geometry-attributes-uv - 
 
 ### () - THU 04/06/2023
-<!-- electionjs examples -->
-* () electionjs-examples: examples-mrsun - 
+* (done) electionjs-examples: examples-mrsun - worked on the prototype more
 <!-- forpost/edit -->
 * () threejs-texture-loader - 
-
-### () - WED 04/05/2023
-<!-- electionjs examples -->
-* () electionjs-examples: examples-mrsun - work more on blocks
-<!-- forpost/edit -->
 * () threejs-plane - 
-<!-- forpost/new -->
-* () threejs-quaternion-setfromunitvectors - any final improvements for source code examples
-* () start post #1035 on threejs-quaternion-setfromunitvectors
-
-### () - TUE 04/04/2023
-<!-- electionjs examples -->
-* (done) electionjs-examples: work on land state for mrsun prototype
-* (done) edit: threejs-shape - proof read opening and getting started
-* (done) forpost: threejs-shape - r146 style update
-* (done) edit: threejs-shape - use new demos
 <!-- videoground content -->
 * () videoground-beta-world - work on breathing-water
 <!-- videoground-content -->
@@ -73,6 +60,16 @@ Should still focus more so on the beta world.
 * () videoground r8 - VIDEO.render method support
 * () videoground r8 - can return a promise in update methods
 * () videoground r8 - export to frames dialog
+
+### () - WED 04/05/2023
+* (done) electionjs-examples: examples-mrsun - work more on blocks
+
+### () - TUE 04/04/2023
+<!-- electionjs examples -->
+* (done) electionjs-examples: work on land state for mrsun prototype
+* (done) edit: threejs-shape - proof read opening and getting started
+* (done) forpost: threejs-shape - r146 style update
+* (done) edit: threejs-shape - use new demos
 
 ### () - MON 04/03/2023
 * (done) forpost: threejs-raycaster - update for post folder demos
