--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -36,19 +36,14 @@ Should still focus more so on the beta world.
 
 ### () - SAT 04/08/2023
 <!-- electionjs examples -->
-* () electionjs-examples: examples-mrsun - 
+* () electionjs-examples: examples-mrsun - At least one revision
 
 ### () - FRI 04/07/2023
+* (done) electionjs-examples: examples-mrsun - work on a few revisions
 <!-- forpost/new -->
-* () threejs-quaternion-setfromunitvectors - any final improvements for source code examples
 * () start post #1035 on threejs-quaternion-setfromunitvectors
-<!-- electionjs examples -->
-* () electionjs-examples: examples-mrsun - 
 <!-- forpost/edit -->
 * () threejs-buffer-geometry-attributes-uv - 
-
-### () - THU 04/06/2023
-* (done) electionjs-examples: examples-mrsun - worked on the prototype more
 <!-- forpost/edit -->
 * () threejs-texture-loader - 
 * () threejs-plane - 
@@ -60,6 +55,9 @@ Should still focus more so on the beta world.
 * () videoground r8 - VIDEO.render method support
 * () videoground r8 - can return a promise in update methods
 * () videoground r8 - export to frames dialog
+
+### () - THU 04/06/2023
+* (done) electionjs-examples: examples-mrsun - worked on the prototype more
 
 ### () - WED 04/05/2023
 * (done) electionjs-examples: examples-mrsun - work more on blocks
