todo update for 04/07/2023

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -2,7 +2,7 @@
 
 VIDEOGROUND-BETA-WORLD, THREEJS
 
-Should still focus more so on the beta world.
+Should still focus more so on the beta world, and trying out new things in general.
 
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
@@ -29,19 +29,44 @@ Should still focus more so on the beta world.
 <!-- videoground content -->
 * () videoground-beta-world - start an all new project that has to do with morph attributes
 
-<!-------- ----------
--- WEEK 2
----------- --------->
-## () - WEEK 2 - SUN 04/02/2023 - SAT 04/08/2023
 
-### () - SAT 04/08/2023
+<!-------- ----------
+-- WEEK 3
+---------- --------->
+## () - WEEK 3 - SUN 04/09/2023 - SAT 04/15/2023
+
+This week I would like to keep working on my new electionjs project at least a little each day. As for continuing to say in my late with threejs I am thinking that I still have a lot more to write about with quaternion objects.
+
+### () - SAT 04/15/2023
 <!-- electionjs examples -->
 * () electionjs-examples: examples-mrsun - At least one revision
 
-### () - FRI 04/07/2023
-* (done) electionjs-examples: examples-mrsun - work on a few revisions
+### () - FRI 04/14/2023
 <!-- forpost/new -->
-* () start post #1035 on threejs-quaternion-setfromunitvectors
+* () start post #1036 on threejs-quaternion-
+<!-- electionjs examples -->
+* () electionjs-examples: examples-mrsun - At least one revision
+
+### () - THU 04/13/2023
+<!-- electionjs examples -->
+* () electionjs-examples: examples-mrsun - At least one revision
+
+### () - WED 04/12/2023
+<!-- electionjs examples -->
+* () electionjs-examples: examples-mrsun - At least one revision
+
+### () - TUE 04/11/2023
+<!-- electionjs examples -->
+* () electionjs-examples: examples-mrsun - At least one revision
+
+### () - MON 04/10/2023
+<!-- electionjs examples -->
+* () electionjs-examples: examples-mrsun - At least one revision
+
+### () - SUN 04/09/2023
+<!-- electionjs examples -->
+* () electionjs-examples: examples-mrsun - At least one revision
+
 <!-- forpost/edit -->
 * () threejs-buffer-geometry-attributes-uv - 
 <!-- forpost/edit -->
@@ -55,6 +80,20 @@ Should still focus more so on the beta world.
 * () videoground r8 - VIDEO.render method support
 * () videoground r8 - can return a promise in update methods
 * () videoground r8 - export to frames dialog
+
+
+<!-------- ----------
+-- WEEK 2
+---------- --------->
+## () - WEEK 2 - SUN 04/02/2023 - SAT 04/08/2023
+
+### () - SAT 04/08/2023
+<!-- electionjs examples -->
+* () electionjs-examples: examples-mrsun - At least one revision
+
+### () - FRI 04/07/2023
+* (done) electionjs-examples: examples-mrsun - work on a few revisions
+* (done) start post #1035 on threejs-quaternion-setfromunitvectors
 
 ### () - THU 04/06/2023
 * (done) electionjs-examples: examples-mrsun - worked on the prototype more
