todo update for 04/10/2023

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -58,17 +58,6 @@ This week I would like to keep working on my new electionjs project at least a l
 ### () - TUE 04/11/2023
 <!-- electionjs examples -->
 * () electionjs-examples: examples-mrsun - At least one revision
-
-### () - MON 04/10/2023
-<!-- electionjs examples -->
-* () electionjs-examples: examples-mrsun - At least one revision
-
-### () - SUN 04/09/2023
-<!-- electionjs examples -->
-* () electionjs-examples: examples-mrsun - At least one revision
-
-<!-- forpost/edit -->
-* () threejs-buffer-geometry-attributes-uv - 
 <!-- forpost/edit -->
 * () threejs-texture-loader - 
 * () threejs-plane - 
@@ -82,14 +71,24 @@ This week I would like to keep working on my new electionjs project at least a l
 * () videoground r8 - export to frames dialog
 
 
+### () - MON 04/10/2023
+* (done) electionjs-examples: examples-mrsun - At least one revision
+* () forpost: threejs-buffer-geometry-attributes-uv - update demos to r146 style
+* () edit: threejs-buffer-geometry-attributes-uv - new demos, proof read
+* () videogrond-beta-world: new 10min video using video4 from breathing-basic 
+* () videoground-clients: work on client project
+
+### () - SUN 04/09/2023
+* (done) electionjs-examples: examples-mrsun - At least one revision
+
+
 <!-------- ----------
 -- WEEK 2
 ---------- --------->
 ## () - WEEK 2 - SUN 04/02/2023 - SAT 04/08/2023
 
 ### () - SAT 04/08/2023
-<!-- electionjs examples -->
-* () electionjs-examples: examples-mrsun - At least one revision
+* (done) electionjs-examples: examples-mrsun - At least one revision
 
 ### () - FRI 04/07/2023
 * (done) electionjs-examples: examples-mrsun - work on a few revisions
