post-check;id#: 885;v: 1.29;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -73,8 +73,8 @@ This week I would like to keep working on my new electionjs project at least a l
 
 ### () - MON 04/10/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
-* () forpost: threejs-buffer-geometry-attributes-uv - update demos to r146 style
-* () edit: threejs-buffer-geometry-attributes-uv - new demos, proof read
+* (done) forpost: threejs-buffer-geometry-attributes-uv - update demos to r146 style
+* (done) edit: threejs-buffer-geometry-attributes-uv - new demos, proof read
 * () videogrond-beta-world: new 10min video using video4 from breathing-basic 
 * () videoground-clients: work on client project
 
