todo update for 04/11/2023

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -56,10 +56,10 @@ This week I would like to keep working on my new electionjs project at least a l
 * () electionjs-examples: examples-mrsun - At least one revision
 
 ### () - TUE 04/11/2023
-<!-- electionjs examples -->
-* () electionjs-examples: examples-mrsun - At least one revision
+* (done) electionjs-examples: examples-mrsun - At least one revision
+* (done) edit: threejs-examples-breath-module - proof read
 <!-- forpost/edit -->
-* () threejs-texture-loader - 
+* () threejs-texture-loader - update to r146 style
 * () threejs-plane - 
 <!-- videoground content -->
 * () videoground-beta-world - work on breathing-water
