post-check;id#: 893;v: 1.37;

--- a/todo/today/todo_2023_04.md
+++ b/todo/today/todo_2023_04.md
@@ -54,17 +54,18 @@ This week I would like to keep working on my new electionjs project at least a l
 ### () - WED 04/12/2023
 <!-- electionjs examples -->
 * () electionjs-examples: examples-mrsun - At least one revision
+<!-- forpost/edit -->
+* () threejs-plane - update to r146 style
 
 ### () - TUE 04/11/2023
 * (done) electionjs-examples: examples-mrsun - At least one revision
 * (done) edit: threejs-examples-breath-module - proof read
-<!-- forpost/edit -->
-* () threejs-texture-loader - update to r146 style
-* () threejs-plane - 
-<!-- videoground content -->
-* () videoground-beta-world - work on breathing-water
-<!-- videoground-content -->
-* () videoground-beta-world - new 5 minute video using breathing basic
+* (done) edit: threejs-texture-loader - update to r146 style
+<!-- videoground-beta-world -->
+* () videoground-beta-world - new 10 minute video using breathing basic
+* () videoground-beta-world - start new breathing-gridwrap project folder
+<!-- videoground-clients -->
+* () work on client project
 <!-- videoground R8 -->
 * () videoground r8 - VIDEO.render method support
 * () videoground r8 - can return a promise in update methods
